2007-04-28  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - test for <rdar://problem/5154144> Hamachi test fails: assertion failure in ListHashSet

        * fast/forms/add-remove-form-elements-stress-test-expected.txt: Added.
        * fast/forms/add-remove-form-elements-stress-test.html: Added.

2007-04-28  Adele Peterson  <adele@apple.com>

        Tests for <rdar://problem/5152299> REGRESSION: <button> elements do not respond to space and return key as similar <input> elements do

        * fast/forms/button-enter-click-expected.txt: Added.
        * fast/forms/button-enter-click.html: Added.
        * fast/forms/button-spacebar-click-expected.txt: Added.
        * fast/forms/button-spacebar-click.html: Added.

2007-04-28  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13501
          REGRESSION (r21093): Pasting into text field fails and makes the caret disappear

        * fast/dynamic/anonymous-block-layer-lost-expected.checksum: Added.
        * fast/dynamic/anonymous-block-layer-lost-expected.png: Added.
        * fast/dynamic/anonymous-block-layer-lost-expected.txt: Added.
        * fast/dynamic/anonymous-block-layer-lost.html: Added.

2007-04-28  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Test for <rdar://problem/4806988> REGRESSION: history.go(0) doesn't reload page (affects buttons at facebook.com)

        * fast/history/history_reload-expected.txt: Added.
        * fast/history/history_reload.html: Added.
        * fast/history/resources/history_reload_window.html: Added.

2007-04-28  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=13514
        REGRESSION (r20997-21003): Crash in WebCore::Node::document

        * fast/dom/NodeList/childNodes-reset-cache-expected.txt: Added.
        * fast/dom/NodeList/childNodes-reset-cache.html: Added.
